--- a/src/helper/i18n/locales/en/englishTranslation.json
+++ b/src/helper/i18n/locales/en/englishTranslation.json
@@ -5,6 +5,7 @@
   "smart_fatty_liver_care": "Smart Fatty Liver Care",
   "investment_information": "Investment Information",
   "logIn": {
+    "admin_log_In": "Admin Log-in",
     "log_In": "Log in",
     "email": "e-mail",
     "password": "password",
