--- a/src/helper/i18n/locales/ko/koreanTranslation.json
+++ b/src/helper/i18n/locales/ko/koreanTranslation.json
@@ -5,6 +5,7 @@
   "smart_fatty_liver_care": "스마트지방간케어",
   "investment_information": "투자정보",
   "logIn": {
+    "admin_log_In": "관리자 로그인",
     "log_In": "로그인",
     "email": "이메일",
     "password": "비밀번호",
