--- a/src/helper/i18n/locales/ko/koreanTranslation.json
+++ b/src/helper/i18n/locales/ko/koreanTranslation.json
@@ -5,7 +5,7 @@
   "smart_fatty_liver_care": "스마트지방간케어",
   "investment_information": "투자정보",
   "search": "검색",
-  "delete_selected": "Delete selected",
+  "delete_selected": "선택 삭제",
   "save": "저장",
   "edit": "수정",
   "registration_date": "가입일",
